Leaderboard app update
removing "autopublish" package, so one user cant' acess all data of
other users.
replaced with meteor.subscribe function

--- a/leaderboard/leaderboard.html
+++ b/leaderboard/leaderboard.html
@@ -7,6 +7,8 @@
     <h1>Leaderboard</h1>
     <p>Create a list of players and give them points. Log in to acces to the app controls and create your list.</p>
     {{> leaderboard}}
+    <br>
+
     <div>{{> loginButtons}}</div>
 
 </body>
@@ -15,6 +17,13 @@
     {{#if showSelectedPlayer}}
         <!--    selected player is displayed here-->
         <li>Selected Player: {{showSelectedPlayer.name}}</li>
+        <div><!--    button for adding points to player-->
+            <input type="button" class="increment" value="Give 5 points">
+            <!--    button for decrementing points from player-->
+            <input type="button" class="decrement" value="Take 5 points">
+            <!-- remove player -->
+            <input type="button" class="remove" value="Remove Player">
+        </div>
     {{/if}}
 
     <!--    list of players   -->
@@ -28,15 +37,11 @@
 
 <template name="addPlayerForm">
     {{#if currentUser}}
-        <!--    button for adding points to player-->
-        <input type="button" class="increment" value="Give 5 points">
-        <!--    button for decrementing points from player-->
-        <input type="button" class="decrement" value="Take 5 points">
         <!-- form for adding a new player -->
         <form>
-            <input type="text" name="playerName">
+            <input type="text" name="playerName" placeholder="Add new player">
             <input type="submit" name="addPlayer">
         </form>
-        <input type="button" class="remove" value="Remove Player">
+
     {{/if}}
 </template>
