--- a/foosboom-chapter3/client/main.html
+++ b/foosboom-chapter3/client/main.html
@@ -11,6 +11,7 @@ Install: meteor add msavin:mongol >activate it in your browser by hitting ctrl-M
     <h1 class="container text-center">Foosboom</h1>
     <section>
         <div class="well">
+            {{>loginButtons}}
             <!-- render the template called teams -->
             {{> teams}}
             {{> games}}
